  inheriting or including a class belonging to a mutually-recursive module
  would previous behave incorrectly, and now results in a clean error.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #11912: Refactoring handling of scoped type variables
  (Richard Eisenberg, review by Gabriel Scherer and Florian Angeletti)

- #12???: Only read ld.conf when there are DLLs to search for.
  (David Allsopp, review by ???)

### Code generation and optimizations:

- #11967: Remove traces of Obj.truncate, which allows some mutable
  loads to become immutable.
  (Nick Barnes, review by Vincent Laviron and KC Sivaramakrishnan)

- #9945, #10883: Turn boolean-result float comparisons into primitive operations
  Uses the architecture's elementary operations for float comparisons,
  when available, rather than branching and then setting the return value.
  (Stefan Muenzel, review by Stephen Dolan, Alain Frisch and Vincent Laviron)

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

- #10834: The -safer-matching option disables type-based optimizations of
  pattern-matching compilation. This allows to produce a match failure if
  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,