@@ -25,6 +25,9 @@ CAMLC=$(BEST_OCAMLC) $(STDLIBFLAGS)
 COMPFLAGS=$(INCLUDES) -absname -w +a-4-9-41-42-44-45-48-70 -warn-error +A \
           -strict-sequence -strict-formats
 LINKFLAGS=-linkall -I $(UNIXDIR) -I $(DYNLINKDIR)
+ifeq "$(SUPPORTS_SHARED_LIBRARIES)" "false"
+  LINKFLAGS += $(SET_RELATIVE_STDLIB)
+endif
 OC_OCAMLDEPDIRS = $(DIRECTORIES)
 
 DIRECTORIES=$(UNIXDIR) $(DYNLINKDIR) $(addprefix $(ROOTDIR)/,\
