@@ -114,6 +114,10 @@
 
 /* Define HAS_UNISTD if you have /usr/include/unistd.h. */
 
+#undef HAS_LIBGEN_H
+
+/* Define HAS_LIBGEN_H if you have /usr/include/libgen.h. */
+
 #undef HAS_DIRENT
 
 /* Define HAS_DIRENT if you have /usr/include/dirent.h and the result of
